// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          disabled={true}
          placeholder=" "
          type="time"
          value="Text"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM gyVdQG"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM fKJsvd"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM kCrhnX"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder=" "
          readOnly={true}
          type="time"
          value="Read only text"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fzoTYr"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-gbFqDM ctYMzI"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM gvPAKK"
          dir="rtl"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-edwNYl epHbuE"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="medium"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <input
        className="sc-gbFqDM oizIL"
        placeholder="large"
        type="time"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM gnHsuw"
          placeholder="xlarge"
          type="time"
        />
        <label
          className="sc-edwNYl ejNdCL"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM gdmOoz"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM fwbcJs"
        placeholder="Placeholder"
        type="time"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk fMtNhl"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="time"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
